# MPU6050

./: CMakeLists.txt  main.c  mpu.uf2
